--- a/a_rtchat/templates/chat.html
+++ b/a_rtchat/templates/chat.html
@@ -18,10 +18,10 @@
             <div class="flex items-center rounded-xl px-2 py-2">
                 <form id="chat_message_form"
                       class="w-full"
-                      hx-post="{% url 'home' %}"
-                      hx-target="#chat_messages"
-                      hx-swap="beforeend"
-                      _="on htmx:afterRequest reset() me"
+                      hx-ext="ws"
+                      ws-connect = "ws/chatroom/gang-gang"
+                      ws-send
+                      _="on htmx:wsAfterSend reset() me"
                 >
 
                     {% csrf_token %}
