--- a/a_rtchat/templates/partials/chat_message_p.html
+++ b/a_rtchat/templates/partials/chat_message_p.html
@@ -1,3 +1,6 @@
+<div id="chat_messages" hx-swap-oob="beforeend">
+
+
 <div class="fade-in-up">
     {% include 'chat_message.html' %}
 </div>
@@ -13,3 +16,5 @@
 </style>
 
 <script>scrollToBottom()</script>
+
+</div>
