add private chat

--- a/a_rtchat/templates/partials/online_count.html
+++ b/a_rtchat/templates/partials/online_count.html
@@ -14,8 +14,8 @@
 
 {% if online_count %}
 <!--user online-->
-<div id="online-icon" class="absolute top-2 left-2 rounded-full bg-green-500 p-1.5"></div>
+<div id="online-icon" class="green-dot absolute top-2 left-2"></div>
 {% else %}
 <!--user offline-->
-<div id="online-icon" class="absolute top-2 left-2 rounded-full bg-grey-500 p-1.5"></div>
+<div id="online-icon" class="gray-dot absolute top-2 left-2"></div>
 {% endif %}
