--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -8,7 +8,42 @@
     <nav class="block bg-gray-800 relative">
         <ul class="navitems flex items-center justify-center h-full">
             {% if request.user.is_authenticated %}
-            <li><a href="/">Home</a></li>
+
+
+            <li x-data="{ dropdownOpen: false }" class="relative">
+                <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
+                    Chat
+                    <img x-bind:class="dropdownOpen && 'rotate-180 duration-300'" class="w-4" src="https://img.icons8.com/small/32/777777/expand-arrow.png"/>
+                </a>
+                <div x-show="dropdownOpen" x-cloak
+                     class="absolute right-0 bg-white text-black shadow rounded-lg w-40 p-2 z-20"
+                     x-transition:enter="duration-300 ease-out"
+                     x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
+                     x-transition:enter-end="opacity-100 translate-y-0 scale-100"
+                >
+                    <ul class="hoverlist [&>li>a]:justify-end">
+                        <!-- Public chat -->
+                        <li><a href="{% url 'home' %}">Public chat</a></li>
+
+                        <!-- Private chats -->
+                        {% for chatroom in user.chat_groups.all %}
+                            {% if chatroom.is_private and chatroom.group_name %}
+                                {% for member in chatroom.members.all %}
+                                    {% if member != user %}
+                                        <li>
+                                            <a href="{% url 'chatroom' chatroom.group_name %}">
+                                                {{ member.profile.name|default:member.username }}
+                                            </a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
+                </div>
+            </li>
+
+
             <li x-data="{ dropdownOpen: false }" class="relative">
                 <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
                     <img class="h-8 w-8 rounded-full object-cover" src="{{ user.profile.avatar }}"/>
