--- a/a_rtchat/templates/partials/online_count.html
+++ b/a_rtchat/templates/partials/online_count.html
@@ -9,6 +9,8 @@
     .fade-in-scale{
         animation: fadeInScale 0.6s ease;
     }
+
+
     </style>
 </span>
 
@@ -19,3 +21,29 @@
 <!--user offline-->
 <div id="online-icon" class="gray-dot absolute top-2 left-2"></div>
 {% endif %}
+
+
+
+
+<ul id="groupchat-members" class="flex gap-4">
+    {% for member in chat_group.members.all %}
+        <li>
+           <a href="{% url 'profile' member.username %}" class="flex flex-col text-gray-400 items-center justify-center w-20 gap-2">
+               <div class="relative w-14 h-14">
+                    <img src="{{ member.profile.avatar }}"
+                         alt="profile_pic"
+                         class="w-14 h-14 rounded-full object-cover">
+
+                    {% if member in chat_group.users_online.all %}
+                        <div class="absolute bottom-0 right-0 w-3 h-3 rounded-full bg-green-400 border-2 border-gray-800"></div>
+                    {% else %}
+                        <div class="absolute bottom-0 right-0 w-3 h-3 rounded-full bg-gray-400 border-2 border-gray-800"></div>
+                    {% endif %}
+                </div>
+
+
+               {{ member.profile.name | slice:":10" }}
+           </a>
+        </li>
+    {% endfor %}
+</ul>
