--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -25,6 +25,16 @@
                         <!-- Public chat -->
                         <li><a href="{% url 'home' %}">Public chat</a></li>
 
+                        {% for chatroom in user.chat_groups.all %}
+                            {% if chatroom.groupchat_name %}
+                                <li>
+                                    <a class="leading-5 text=right" href="{% url 'chatroom' chatroom.group_name %}" >
+                                        {{ chatroom.groupchat_name | slice:":30" }}  <!--====slice -> character limit====-->
+                                    </a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+
                         <!-- Private chats -->
                         {% for chatroom in user.chat_groups.all %}
                             {% if chatroom.is_private and chatroom.group_name %}
@@ -58,6 +68,7 @@
                     <ul class="hoverlist [&>li>a]:justify-end">
                         <li><a href="{% url 'profile' %}">My Profile</a></li>
                         <li><a href="{% url 'profile-edit' %}">Edit Profile</a></li>
+                        <li><a href="{% url 'new-groupchat' %}">Create Chat</a></li>
                         <li><a href="{% url 'profile-settings' %}">Settings</a></li>
                         <li><a href="{% url 'account_logout' %}">Log Out</a></li>
                     </ul>
