--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,9 +1,12 @@
 <header class="flex items-center justify-between bg-gray-800 h-20 px-8 text-white sticky top-0 z-40">
-    <div>
+    <div class="flex items-center">
         <a class="flex items-center gap-2" href="/">
             <img class="h-6" src="/static/images/logo.svg" alt="Logo"/>
             <span class="text-lg font-bold">Real Time Chat</span>
         </a>
+
+        <div id="online-user-count"></div>
+
     </div>
     <nav class="block bg-gray-800 relative">
         <ul class="navitems flex items-center justify-center h-full">
@@ -11,7 +14,9 @@
 
 
             <li x-data="{ dropdownOpen: false }" class="relative">
+
                 <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
+                    <div id="online-in-chats"></div>
                     Chat
                     <img x-bind:class="dropdownOpen && 'rotate-180 duration-300'" class="w-4" src="https://img.icons8.com/small/32/777777/expand-arrow.png"/>
                 </a>
@@ -21,35 +26,7 @@
                      x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
                      x-transition:enter-end="opacity-100 translate-y-0 scale-100"
                 >
-                    <ul class="hoverlist [&>li>a]:justify-end">
-                        <!-- Public chat -->
-                        <li><a href="{% url 'home' %}">Public chat</a></li>
-
-                        {% for chatroom in user.chat_groups.all %}
-                            {% if chatroom.groupchat_name %}
-                                <li>
-                                    <a class="leading-5 text=right" href="{% url 'chatroom' chatroom.group_name %}" >
-                                        {{ chatroom.groupchat_name | slice:":30" }}  <!--====slice -> character limit====-->
-                                    </a>
-                                </li>
-                            {% endif %}
-                        {% endfor %}
-
-                        <!-- Private chats -->
-                        {% for chatroom in user.chat_groups.all %}
-                            {% if chatroom.is_private and chatroom.group_name %}
-                                {% for member in chatroom.members.all %}
-                                    {% if member != user %}
-                                        <li>
-                                            <a href="{% url 'chatroom' chatroom.group_name %}">
-                                                {{ member.profile.name|default:member.username }}
-                                            </a>
-                                        </li>
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
+                    <ul id="chats-list">{% include "partials/online_status.html" %}</ul>
                 </div>
             </li>
 
