--- a/a_rtchat/templates/chat.html
+++ b/a_rtchat/templates/chat.html
@@ -68,7 +68,7 @@
             </ul>
         </div>
         <div class="sticky bottom-0 z-10 p-2 bg-gray-800">
-            <div class="flex items-center rounded-xl px-2 py-2">
+            <div class="flex flex-col gap-4 items-center rounded-xl px-2 py-2">
                 <form id="chat_message_form"
                       class="w-full"
                       hx-ext="ws"
@@ -80,6 +80,17 @@
                     {% csrf_token %}
                     {{ form }}
                 </form>
+
+                <form id="chat_file_form" enctype="multipart/form-data" class="flex items-center w-full"
+                hx-post="{% url 'chatroom_file_upload' chat_group.group_name %}"
+                hx-target="#chat_messages"
+                hx-swap="beforeend"
+                _="on htmx:beforeSend reset() me" >
+                    {% csrf_token %}
+                    <input type="file" name="file" id="id_file" class="!bg-transparent text-gray-400">
+                    <button type="submit" class="whitespace-nowrap !text-sm !py-3 !px-4 h-fit">Submit File</button>
+                </form>
+
             </div>
         </div>
     </div>
@@ -97,9 +108,14 @@
 
 {% block javascript %}
     <script>
-        function scrollToBottom(){
-            const container = document.getElementById('chat_container');
-            container.scrollTop = container.scrollHeight
+        function scrollToBottom(time=0){
+            setTimeout(
+                function (){
+                    const container = document.getElementById('chat_container');
+                    container.scrollTop = container.scrollHeight
+                }, time
+            );
+
         }
         scrollToBottom()
 
