--- a/a_rtchat/templates/chat_message.html
+++ b/a_rtchat/templates/chat_message.html
@@ -1,7 +1,10 @@
 {% if message.author == user %}
                     <li class="flex justify-end mb-4">
                     <div class="bg-green-200 rounded-l-lg rounded-tr-lg p-4 max-w-[75%]">
-                        <span>{{ message.body }}</span>
+
+                        <!--message content-->
+                        {% include 'partials/message_content.html' %}
+
                     </div>
                     <div class="flex items-end">
                         <svg height="13" width="8" >
@@ -26,7 +29,7 @@
                             </svg>
                         </div>
                         <div class="bg-white p-4 max-w-[75%] rounded-r-lg rounded-tl-lg">
-                            <span>{{ message.body }}</span>
+                            {% include 'partials/message_content.html' %}
                         </div>
                     </div>
                     <div class="text-sm font-light py-1 ml-10">
