--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,7 +2,12 @@
     <div class="flex items-center">
         <a class="flex items-center gap-2" href="/">
             <img class="h-6" src="/static/images/logo.svg" alt="Logo"/>
-            <span class="text-lg font-bold">Real Time Chat</span>
+            <span class="text-lg font-bold">
+                Real Time Chat
+                {% if debug %}
+                    <span class="text-yellow-400 font-light italic ml-1">DEV</span>
+                {% endif %}
+            </span>
         </a>
 
         <div id="online-user-count"></div>
